...
            case lazy1 = "No Leak - 1"
        }
    }
    
    override func viewDidLoad() {
        super.viewDidLoad()
        title = "Delegate"
    }

    override func numberOfSections(in tableView: UITableView) -> Int {
        2
    }
    
...
