...

    func application(_ application: UIApplication, configurationForConnecting connectingSceneSession: UISceneSession, options: UIScene.ConnectionOptions) -> UISceneConfiguration {
        UISceneConfiguration(name: "Default Configuration", sessionRole: connectingSceneSession.role)
    }

    private func showLeakAlert(_ message: String) {
        let alertController = UIAlertController(title: "LEAK", message: message, preferredStyle: .alert)
        let action = UIAlertAction(title: "OK", style: .cancel) { _ in }
        alertController.addAction(action)
        UIApplication.shared.topMostViewController()?.present(alertController, animated: true, completion: nil)
    }
}

