...
        
        enum Leak: String, CaseIterable {
            case lazy1 = "Leak - 1"
        }
        
        enum NoLeak: String, CaseIterable {
            case lazy1 = "No Leak - 1"
        }
    }
    
    private var statusLabel: UILabel?
    private var cancellables = Set<AnyCancellable>()

    override func viewDidLoad() {
        super.viewDidLoad()
        title = "UICollectionView"
        
        LeakDetectorCombine.LeakDetector.instance.status
            .sink(
                receiveValue: { [weak self] status in
                    self?.statusLabel?.text = "\(status)"
                }
...
